fix error, for loop, & CSS

--- a/main_app/templates/teas/index.html
+++ b/main_app/templates/teas/index.html
@@ -1,20 +1,30 @@
-{% extends 'base.html' %} 
-{% block content %}
-<div class="card" style='background-color: #efe4d4; box-shadow: 0 0 20px 5px #151618;margin: 1rem;'>
-  <a href="/teas/{{ tea.id }}">
+{% extends 'base.html' %} {% block content %}
+{% for tea in teas %}
+
+<div
+  class="card"
+  style= 
+  "
+    background-color: #efe4d4;
+    box-shadow: 0 0 20px 5px #151618;
+    margin: 1rem;
+    padding: .5rem;
+  "
+>
+  <a href="/teas/{{ tea.id }}"
     <div class="card-content">
-      <span class="card-title">{{ tea.name }}</span>
-      <p>Variety: {{ tea.variety }}</p>
-      <p>Description: {{ tea.description }}</p>
-      <p>Strength: {{tea.strength}}</p>
+      <span class="card-title"><b>{{ tea.name }}</b></span>
+      <p><b>Variety:</b> {{ tea.variety }}</p>
+      <p><b>Description:</b> {{ tea.description }}</p>
+      <p><b>Strength:</b> {{tea.strength}}</p>
       {% if tea.quantity <= 5 %}
-      <p>Quantity: {{ tea.quantity }}</p>
+      <p style="color: red">Quantity: {{ tea.quantity }}</p>
       {% else %}
-      <p style='color: red'>Quantity: {{ tea.quantity }} - Restock Needed</p>
+      <p><b>Quantity:</b> {{ tea.quantity }} - Restock Needed</p>
       {% endif %}
-      <p>Full Box: {{ tea.quantPerBox }}</p>
+      <p><b>Full Box:</b> {{ tea.quantPerBox }}</p>
     </div>
-    <!-- and this following one as well -->
   </a>
 </div>
+{% endfor %}
 {% endblock %}
