--- a/main_app/templates/teas/index.html
+++ b/main_app/templates/teas/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
+<h1 style='text-align: center;'>Tea List</h1>
 {% for tea in teas %}
-
 <div
   class="card"
   style= 
