convert to Bootstrap

--- a/main_app/templates/teas/index.html
+++ b/main_app/templates/teas/index.html
@@ -1,19 +1,21 @@
 {% extends 'base.html' %} {% block content %}
-<h1 style='text-align: center;'>Tea List</h1>
+<h1 style="text-align: center">Tea List</h1>
 {% for tea in teas %}
-<div
-  class="card"
-  style= 
-  "
-    background-color: #efe4d4;
-    box-shadow: 0 0 20px 5px #151618;
-    margin: 1rem;
-    padding: .5rem;
-  "
->
-  <a href="/teas/{{ tea.id }}"
-    <div class="card-content">
-      <span class="card-title"><b>{{ tea.name }}</b></span>
+<a href="/teas/{{ tea.id }}">
+  <div
+    class="card"
+    style="
+      background-color: #efe4d4;
+      box-shadow: 0 0 20px 5px #151618;
+      margin: 1rem;
+      padding: 0.5rem;
+    "
+  >
+    <h5 class="card-header"><b>{{tea.name}}</b></h5>
+    <div class="card-body">
+      {% comment %}
+      <h5 class="card-title"><b>{{ tea.name }}</b></h5>
+      {% endcomment %}
       <p><b>Variety:</b> {{ tea.variety }}</p>
       <p><b>Description:</b> {{ tea.description }}</p>
       <p><b>Strength:</b> {{tea.strength}}</p>
@@ -24,7 +26,6 @@
       {% endif %}
       <p><b>Full Box:</b> {{ tea.quantPerBox }}</p>
     </div>
-  </a>
-</div>
-{% endfor %}
-{% endblock %}
+  </div>
+</a>
+{% endfor %} {% endblock %}
