--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -4,20 +4,26 @@ body {
   flex-direction: column;
   background-color: #556b2f;
   font-family: Fraunces;
-  font-size: medium;
+  font-size: large;
 }
 
 main {
-  flex: 1 0 auto;
+    flex: 1 0 auto;
 }
 
 footer.page-footer {
-  padding-top: 0;
-  text-align: right;
+    margin-top: 1rem;
+    padding-top: 0;
+    text-align: right;
+}
+nav{
+    background-color: #b07946;
+    box-shadow: 0 0 20px 5px #151618;
+    margin-bottom: 1rem;
 }
 
 nav a {
-  color: #efe4d4 !important;
+    color: #efe4d4 !important;
 }
 
 main a{
