--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -24,8 +24,8 @@
     />
   </head>
   <body>
-    <header class="navbar-fixed">
-      <nav class="navbar navbar-expand-lg navbar-light">
+    {% comment %} <header class="navbar-fixed"> {% endcomment %}
+      <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <a class="navbar-brand" href="/">The Daily Grind</a>
         <button
           class="navbar-toggler"
@@ -81,15 +81,15 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <a class="dropdown-item" href="#">View All</a>
+                <a class="dropdown-item" href="/coffees">View All</a>
                 <a class="dropdown-item" href="#">Add New</a>
             </li>
           </ul>
         </div>
       </nav>
-    </header>
+    {% comment %} </header> {% endcomment %}
     <main class="container">{% block content %} {% endblock %}</main>
-    <footer class="page-footer" style="background-color: #b07946;box-shadow: 0 0 20px 5px #151618; ">
+    <footer class="page-footer" style="background-color: #b07946; box-shadow: 0 0 15px 5px #151618;">
       <div class="right">
         All Rights Reserved, &copy; 2021 The Daily Grind &nbsp;
       </div>
