--- a/main_app/templates/teas/index.html
+++ b/main_app/templates/teas/index.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
+{%load static%}
 <h1 style="text-align: center"><b>Tea List</b></h1>
 {% for tea in teas %}
 <a href="{% url 'detail' tea.id %}">
@@ -9,13 +11,19 @@
       <p><b>Description:</b> {{ tea.description }}</p>
       <p><b>Strength:</b> {{tea.strength}}</p>
       {% if tea.quantity <= 5 %}
-      <p style="color: rgb(175, 53, 33)">
+      <p style="color: rgb(230, 53, 33)">
         <b>Quantity:</b> {{ tea.quantity }} - Restock Needed
       </p>
       {% else %}
       <p><b>Quantity:</b> {{ tea.quantity }}</p>
       {% endif %}
       <p><b>Full Box:</b> {{ tea.quantPerBox }}</p>
+    </div>
+    <div class="card-footer">
+      <a href="#" class="btn detailEdit">Brew</a>
+      <a href="#" class="btn detailDelete"
+        >Restock</a
+      >
     </div>
   </div>
 </a>
