--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,5 +1,12 @@
-{% extends 'base.html' %}
-{% block content %}
-    <h1>Home Page</h1>
-{% endblock %}
+{% extends 'base.html' %} {% block content %}
 
+<h1><b>Welcome to The Daily Grind</b></h1>
+<div class="home">
+  <img
+    src="https://media.giphy.com/media/jUijZ1ELHyFCflXk7x/giphy.gif"
+    alt=""
+  />
+  <h2><b>Have A Brew & Start Anew!</b></h2>
+</div>
+
+{% endblock %}
