--- a/main_app/templates/coffees/detail.html
+++ b/main_app/templates/coffees/detail.html
@@ -6,7 +6,7 @@
   {% comment %} style="max-width: 18rem;" {% endcomment %}
   <div class="card-header"><b>{{coffee.name}} </b></div>
   <div class="card-body">
-    <p><b>Variety:</b> {{ coffee.variety }}</p>
+    <p><b>Blend:</b> {{ coffee.blend }}</p>
     <p><b>Roast:</b> {{ coffee.roast }}</p>
     <p><b>Description:</b> {{ coffee.description }}</p>
     <p><b>Strength:</b> {{coffee.strength}}</p>
