--- a/main_app/templates/coffees/index.html
+++ b/main_app/templates/coffees/index.html
@@ -5,7 +5,7 @@
   <div class="card cardStyle">
     <h5 class="card-header"><b>{{coffee.name}}</b></h5>
     <div class="card-body">
-      <p><b>Variety:</b> {{ coffee.variety }}</p>
+      <p><b>Blend:</b> {{ coffee.blend }}</p>
       <p><b>Roast:</b> {{ coffee.roast }}</p>
       <p><b>Description:</b> {{ coffee.description }}</p>
       <p><b>Strength:</b> {{coffee.strength}}</p>
