--- a/main_app/templates/teas/index.html
+++ b/main_app/templates/teas/index.html
@@ -18,19 +18,20 @@
       <p><b>Full Box:</b> {{ tea.quantPerBox }}</p>
     </div>
     <div class="card-footer">
-      <form action="{% url 'teas_brew' tea.id %}" method="POST">
-        {% csrf_token %}
-        <button type="submit" class="btn detailEdit" style="max-width: 35%">
-          Brew
-        </button>
-      </form>
-      <div class="card-footer">
-        <form action="{% url 'teas_restock' tea.id %}" method="POST">
+      <div class='formDiv'>
+        <form action="{% url 'teas_brew' tea.id %}" method="POST" class='forms'>
           {% csrf_token %}
-          <button type="submit" class="btn detailDelete" style="max-width: 35%">
-            Restock 
+          <button type="submit" class="btn detailEdit" style="width: 35%">
+            Brew
           </button>
         </form>
+        <form action="{% url 'teas_restock' tea.id %}" method="POST" class='forms'>
+          {% csrf_token %}
+          <button type="submit" class="btn detailDelete" style="width: 35%">
+            Restock
+          </button>
+        </form>
+      </div>
     </div>
   </div>
 </a>
