--- a/main_app/templates/main_app/tea_confirm_delete.html
+++ b/main_app/templates/main_app/tea_confirm_delete.html
@@ -7,7 +7,7 @@
     >?
   </h4>
   <div class="buttonBlock">
-    <form action="" method="POST">
+    <form action="" method="POST" class="columnForm">
       {% csrf_token %}
 
       <button
