Coffee restock and brew html

--- a/main_app/templates/teas/index.html
+++ b/main_app/templates/teas/index.html
@@ -19,13 +19,13 @@
     </div>
     <div class="card-footer">
       <div class='formDiv'>
-        <form action="{% url 'teas_brew' tea.id %}" method="POST" class='forms'>
+        <form action="{% url 'teas_brew' tea.id %}" method="POST">
           {% csrf_token %}
           <button type="submit" class="btn detailEdit">
             Brew
           </button>
         </form>
-        <form action="{% url 'teas_restock' tea.id %}" method="POST" class='forms'>
+        <form action="{% url 'teas_restock' tea.id %}" method="POST">
           {% csrf_token %}
           <button type="submit" class="btn detailDelete idxRestockBtn" >
             Restock
