--- a/main_app/templates/coffees/index.html
+++ b/main_app/templates/coffees/index.html
@@ -19,8 +19,18 @@
       <p><b>Full Bag:</b> {{ coffee.servPerBag }} servings</p>
     </div>
     <div class="card-footer">
-      <a href="#" class="btn detailEdit">Brew</a>
-      <a href="#" class="btn detailDelete">Restock</a>
+      <div class="formDiv">
+        <form action="{% url 'coffees_brew' coffee.id %}" method="POST">
+          {% csrf_token %}
+          <button type="submit" class="btn detailEdit">Brew</button>
+        </form>
+        <form action="{% url 'coffees_restock' coffee.id %}" method="POST">
+          {% csrf_token %}
+          <button type="submit" class="btn detailDelete idxRestockBtn">
+            Restock
+          </button>
+        </form>
+      </div>
     </div>
   </div>
 </a>
