--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -89,6 +89,9 @@
               </li>
             {% else %}
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">Log In</a>
               </li>
             {% endif %}
