--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -66,7 +66,7 @@ input {
   background-color: #efe4d4;
   box-shadow: 0 0 15px 5px #151618;
   margin: 1rem;
-  padding: .25rem;
+  padding: 0.25rem;
 }
 
 .detailEdit {
@@ -124,4 +124,20 @@ input {
 
 .idxRestockBtn {
   margin-left: 0.5rem;
+}
+
+.red {
+  color: rgb(230, 53, 33);
+}
+
+.signupBtn {
+  background-color: #556b2f;
+  font-weight: 700;
+  margin-top: 0.5rem;
+  border: 0.5px solid #151618;
+  box-shadow: 0 0 1.5px 0.35px #151618;
+}
+
+.signupPage{
+  padding: .5rem;
 }
