--- a/main_app/templates/timer.html
+++ b/main_app/templates/timer.html
@@ -98,7 +98,10 @@
           </ul>
         </div>
       </nav>
-    <main class="container">{% block content %} {% endblock %}</main>
+    <main class="container">
+
+        
+    </main>
     <footer class="page-footer" style="background-color: #b07946; box-shadow: 0 0 15px 5px #151618;">
       <div class="right">
         All Rights Reserved, &copy; 2021 The Daily Grind &nbsp;
