--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -44,7 +44,7 @@
             </li>
             {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="#">Timer</a>
+                <a class="nav-link" href="{% url 'timer'%}">Timer</a>
               </li>
               <li class="nav-item dropdown">
                 <a
