--- a/main_app/templates/timer.html
+++ b/main_app/templates/timer.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>The Daily Grind</title>
+    <script defer src="{% static  'js/timer.js'%}"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -44,7 +45,7 @@
             </li>
             {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="#">Timer</a>
+                <a class="nav-link" href="{% url 'timer'%}">Timer</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -100,7 +101,27 @@
       </nav>
     <main class="container">
 
-        
+        <body>
+            <h1><b>Tea Time</b></h1>
+            <div class="cardStyle">
+
+                <h1 id="timer">0:00</h1>
+                Seconds
+                <div class="progress" style=" border: 1px solid #151618;">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" id='seconds' role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="60"></div>
+                </div>
+                <br>
+                Minutes
+                <div class="progress" style=" border: 1px solid #151618;">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" id='minutes' role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="60"></div>
+                </div>
+                
+                <br><br>
+                <button id="startButton" class="btn detailEdit">Start</button>
+                <button id="threeMinButton" class="btn detailDelete" style="background-color: #b07946;">3 Min</button>
+                <button id="fiveMinButton" class="btn detailDelete">5 Min</button>
+            </div>
+
     </main>
     <footer class="page-footer" style="background-color: #b07946; box-shadow: 0 0 15px 5px #151618;">
       <div class="right">
