--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -12,6 +12,7 @@ main {
 }
 
 footer.page-footer {
+  color: #efe4d4 !important;
   margin-top: 1rem;
   padding-top: 0;
   text-align: right;
@@ -71,7 +72,7 @@ input {
 
 .detailEdit {
   background-color: #556b2f;
-  color: #efe4d4;
+  color: #efe4d4 !important;
   font-weight: 700;
   margin-top: 0.5rem;
   border: 0.5px solid #151618;
@@ -80,7 +81,7 @@ input {
 
 .detailDelete {
   background-color: rgb(175, 53, 33);
-  color: #efe4d4;
+  color: #efe4d4 !important;
   font-weight: 700;
   margin-top: 0.5rem;
   margin-left: 0.25rem;
@@ -102,6 +103,7 @@ input {
 
 .confirmDelete {
   background-color: rgb(175, 53, 33);
+  color: #efe4d4 !important;
   font-weight: 700;
   margin-top: 0.5rem;
   border: 0.5px solid #151618;
@@ -110,6 +112,7 @@ input {
 
 .cancelDelete {
   background-color: #556b2f;
+  color: #efe4d4 !important;
   font-weight: 700;
   margin-top: 0.5rem;
   border: 0.5px solid #151618;
@@ -142,4 +145,30 @@ input {
 
 .signupPage{
   padding: .5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.timerBtnDiv{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.timeDiv{
+  border: 2px solid #151618;
+  background-color: white;
+  width: fit-content;
+  height: 3.5rem;
+  padding: .3rem;
+  border-radius: 1rem;
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: center; */
+  align-self: center;
+  
+}
+
+.timer{
+  font-weight: 700;
 }
