README.md changes

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -137,6 +137,7 @@ input {
 
 .signupBtn {
   background-color: #556b2f;
+  color: #efe4d4 !important;
   font-weight: 700;
   margin-top: 0.5rem;
   border: 0.5px solid #151618;
