--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,7 +1,23 @@
-{% extends 'base.html' %}
-{% block content %}
-    <h1>About the Daily Grind</h1>
-    <hr />
-    <p>Have a brew and start anew! </p>
-    <footer>All Rights Reserved, &copy; 2021 Daily Grind</footer>
+{% extends 'base.html' %} {% block content %}
+<h1><b>About The Daily Grind</b></h1>
+<hr />
+<h5>
+  <b>
+    Start your Daily Grind off bright with a selection of teas and coffee that
+    are tailored by you and ready to brew. Simply add your personal inventory to
+    your list and adjust each flavor profile accordingly. After that just choose
+    which drink you would like to brew and we'll keep track of the stock for
+    you! When it comes time to get more just click the 'Restock' button and
+    we'll add that new box in for you! The timer feature will ensure a perfect
+    tasting cup everytime. So have yourself a brew and start your day anew!
+  </b>
+</h5>
+<div class="sunDiv">
+  <img
+    src="https://pngimg.com/uploads/sun/sun_PNG13427.png"
+    alt="sun"
+    class="sun"
+  />
+</div>
+
 {% endblock %}
