--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -8,7 +8,7 @@
     your list and adjust each flavor profile accordingly. After that just choose
     which drink you would like to brew and we'll keep track of the stock for
     you! When it comes time to get more just click the 'Restock' button and
-    we'll add that new box in for you! The timer feature will ensure a perfect
+    we'll add that new box in for you. The timer feature will ensure a perfect
     tasting cup every time. So have yourself a brew and start your day anew!
   </b>
 </h5>
